--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
   "author": "Michele Greenwood <mugreenwood.pdx@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "eslint": "^4.8.0",
     "mocha": "^4.0.1"
+  },
+  "dependencies": {
+    "express": "^4.16.2",
+    "mongoose": "^4.12.3",
+    "morgan": "^1.9.0"
   }
 }
