--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "error-handler": "^1.0.0",
     "eslint": "^4.8.0",
     "mocha": "^4.0.1"
   },
