--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Michele Greenwood <mugreenwood.pdx@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
